--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,49 +1,131 @@
 {
   "phase0": {
-    "mainTitle": "Leviathan Genesis Protocol",
-    "phaseTitle": "Phase 0: Activation",
-    "description": "Define the foundational parameters for the strategic excavation.",
-    "domainLabel": "1. Domain of Excavation",
-    "domainPlaceholder": "e.g., Productivity for asynchronous remote teams in the tech sector",
-    "contextLabel": "2. Creator Context",
-    "contextPlaceholder": "e.g., Solopreneur with a background in UX/UI, no initial investment capital, with 15 hours per week to dedicate to the project.",
-    "ambitionLabel": "3. Ambition Level",
-    "ambitionPlaceholder": "e.g., Create a Micro-SaaS B2B that reaches $10k MRR in 24 months.",
-    "surpriseButton": "✨ Surprise Me: Generate a Thesis",
-    "nextButton": "Begin Deconstruction →"
+    "mainTitle": "60-Second Unicorn",
+    "phaseTitle": "Discover Your Million-Dollar Idea in 60 Seconds",
+    "description": "Answer 3 questions and uncover your next unicorn startup. Get market analysis, potential scoring, and complete roadmap instantly.",
+    "domainLabel": "What market gets you excited?",
+    "domainPlaceholder": "e.g., AI fitness coaches, Remote work tools, Creator economy platforms",
+    "contextLabel": "What's your superpower + constraints?",
+    "contextPlaceholder": "e.g., Full-stack developer, no initial capital, 20 hours/week, based in Austin.",
+    "ambitionLabel": "What would be your epic win?",
+    "ambitionPlaceholder": "e.g., Build a SaaS reaching $50k MRR in 24 months and become industry leader.",
+    "surpriseButton": "🦄 Generate My Unicorn Idea",
+    "nextButton": "Validate My Own Idea →"
+  },
+  "phase1_principles": {
+    "phaseTitle": "Phase 1: Strategic Deconstruction",
+    "phaseDescription": "We begin with first principles. Deconstruct your market to find fundamental truths.",
+    "label1_1": "1.1 What domain or idea do you want to explore?",
+    "placeholder1_1": "e.g., Productivity apps for remote teams",
+    "label1_2": "Behind this, what is the fundamental, timeless human need?",
+    "description1_2": "e.g., The need for security, status, connection, growth, self-expression.",
+    "placeholder1_2": "e.g., The need to feel a sense of progress and accomplishment.",
+    "feedbackButton": "Get Socratic Feedback",
+    "loadingText": "Analyzing...",
+    "label1_3": "What are 2-3 non-negotiable truths about this domain?",
+    "description1_3": "Physical, economic, or psychological laws. One per line.",
+    "placeholder1_3": "e.g., Attention is a finite resource.\nContext switching destroys productivity.\nPeople want results, not tools.",
+    "nextButton": "Next Step →"
+  },
+  "phase1_conventions": {
+    "phaseTitle": "Phase 1.1: Challenge Conventions",
+    "phaseDescription": "Identify fragile market assumptions and formulate revolutionary counter-hypotheses.",
+    "blockTitle": "Convention #{index + 1}",
+    "label1": "Convention / 'Best Practice':",
+    "placeholder1": "e.g., Startups need venture funding to scale successfully.",
+    "label2": "Revolutionary Counter-Hypothesis:",
+    "placeholder2": "e.g., Bootstrapping + revenue from day 1 is more powerful than venture capital.",
+    "addButton": "+ Add Another Convention",
+    "removeButton": "Remove",
+    "backButton": "← Back",
+    "nextButton": "Next Step →"
+  },
+  "phase1_jtbd": {
+    "phaseTitle": "Phase 1.2: Define the 'Job To Be Done'",
+    "phaseDescription": "Articulate the real job your customer is 'hiring' your product to do.",
+    "verbLabel": "VERB:",
+    "verbPlaceholder": "e.g., organize",
+    "objectLabel": "OBJECT:",
+    "objectPlaceholder": "e.g., client feedback",
+    "contextLabel": "CONTEXT:",
+    "contextPlaceholder": "e.g., when launching a new feature",
+    "outcomeLabel": "OUTCOME:",
+    "outcomePlaceholder": "e.g., ship updates faster",
+    "summaryTitle": "Your Job To Be Done",
+    "summaryPhrase": "When {context}, help me {verb} {object}, so I can {outcome}.",
+    "dimensionsTitle": "What are the full dimensions of this job?",
+    "functionalLabel": "FUNCTIONAL:",
+    "functionalPlaceholder": "What are the measurable, objective results?",
+    "emotionalLabel": "EMOTIONAL:",
+    "emotionalPlaceholder": "How do they want to feel?",
+    "socialLabel": "SOCIAL:",
+    "socialPlaceholder": "How do they want to be perceived by others?",
+    "nextButton": "View Thesis Summary →"
+  },
+  "phase1_progress": {
+    "phaseTitle": "Phase 1.3: The Four Forces of Progress",
+    "phaseDescription": "Analyze the physics of the customer's decision-making process.",
+    "pushLabel": "PUSH of the Situation:",
+    "pushDescription": "What are the pains, frustrations, and workarounds with the current solution that push them to seek something new?",
+    "pushPlaceholder": "e.g., I keep losing track of feedback shared in Slack channels, causing delays and frustrated clients...",
+    "pullLabel": "PULL of the New Solution:",
+    "pullDescription": "What is the promise and vision of a 'new me' that the new solution attracts them with?",
+    "pullPlaceholder": "e.g., A future where all feedback is centralized, actionable, and I never miss a critical insight.",
+    "anxietyLabel": "ANXIETY of the New Solution:",
+    "anxietyDescription": "What fears, uncertainties, and objections does the idea of adopting the new solution generate?",
+    "anxietyPlaceholder": "e.g., What if it's too complicated to set up? Will my team actually use it?",
+    "habitLabel": "HABIT of the Present:",
+    "habitDescription": "What is the gravitational pull of inertia and attachment to the current solution, even if it's flawed?",
+    "habitPlaceholder": "e.g., It's just easier to quickly send a Slack message, even if it gets lost later.",
+    "nextButton": "Begin Ecosystem Analysis →"
   },
   "generating": {
-    "title": "Executing LEVIATHAN Protocol",
-    "description": "This complex process can take up to a minute. The AI is performing a deep strategic analysis to generate a high-quality result.",
+    "title": "Analyzing Your Unicorn Potential",
+    "description": "Our AI Oracle is performing deep strategic analysis to generate unicorn-grade insights. This process takes up to 60 seconds to ensure maximum accuracy.",
     "phases": [
-      "Phase 1: Deconstructing Reality...",
-      "Analyzing First Principles & JTBD...",
-      "Phase 2: Mapping Ecosystem...",
-      "Analyzing PESTEL & Porter's Forces...",
-      "Phase 3: Creative Synthesis...",
-      "Executing SCAMPER & Cross-Pollination...",
-      "Phase 4: Modeling Business Viability...",
-      "Designing Lean Canvas & Hook Model...",
-      "Phase 5: Forging Final Thesis...",
-      "Manifesting..."
+      "Phase 1: Deconstructing Market Reality...",
+      "Analyzing First Principles & Customer Jobs...",
+      "Phase 2: Mapping Competitive Landscape...",
+      "Running PESTEL & Porter Five Forces...",
+      "Phase 3: Generating Innovative Business Hypotheses...",
+      "Modeling Lean Canvas & Engagement Patterns...",
+      "Phase 4: Calculating Unicorn Score...",
+      "Phase 5: Creating Your Execution Blueprint...",
+      "Finalizing: Generating Coding Prompt..."
     ]
   },
   "summary": {
-    "title": "Your Final Thesis & Product Manifesto",
-    "description": "This is the culmination of your strategic analysis. Review the final blueprint before generating the coding prompt.",
+    "title": "Your Final Unicorn Analysis",
+    "description": "This is the culmination of your strategic analysis. Review your unicorn score and final blueprint before generating the coding prompt.",
     "selectedHypothesis": "Selected Hypothesis",
-    "justification": "Justification",
-    "thesisStatement": "The Thesis Statement (Placeholder)",
+    "justification": "Strategic Justification",
+    "thesisStatement": "Thesis Statement",
     "coreBlueprint": "Core Blueprint",
-    "uvp": "UVP",
-    "unfairAdvantage": "Unfair Advantage",
-    "flywheel": "Flywheel",
+    "uniqueValueProp": "Unique Value Proposition",
+    "unfairAdvantage": "Competitive Advantage",
+    "flywheel": "Growth Engine",
+    "unicornScore": "Unicorn Score",
+    "loadingText": "Loading unicorn analysis...",
+    "errorText": "Error: Inconsistent analysis data...",
+    "failureText": "AI failed to generate valid analysis. Please try again.",
     "backButton": "← Back",
-    "nextButton": "Generate Final Prompt →",
-    "loading": "Loading thesis or waiting for model selection...",
-    "error": "Error: Inconsistent data received. Could not display summary.",
-    "generationFailedError": "The AI failed to generate a valid thesis after multiple attempts. This can be an intermittent issue.",
-    "tryAgainButton": "Try Again",
-    "thesisStatementTemplate": "The market believes in \"{{convention}}\", but the truth is that [Radical Counter-Hypothesis], which we will materialize through a [Solution Type] that leverages [Unfair Advantage]."
+    "generateButton": "Generate Coding Prompt →",
+    "retryButton": "Try Again"
+  },
+  "manifesto": {
+    "title": "Your Unicorn Coding Blueprint",
+    "description": "This is your final artifact: a detailed prompt to build your unicorn MVP. Copy this and bring your vision to life on any AI platform (Lovable, Bolt.new, v0).",
+    "unicornScoreTitle": "🦄 Unicorn Score",
+    "scoreMessages": {
+      "exceptional": "🚀 Potential Unicorn! This idea has exceptional potential.",
+      "strong": "⭐ Strong Potential! This could be your breakthrough idea.",
+      "good": "💡 Good Foundation! With refinement, this could work very well.",
+      "needsWork": "🔧 Needs Work! Consider pivoting or major adjustments.",
+      "highRisk": "⚠️ High Risk! This idea may need fundamental changes."
+    },
+    "copyButton": "Copy to Clipboard",
+    "copiedButton": "Copied!",
+    "shareButton": "📱 Share My Score",
+    "resetButton": "Discover Another Unicorn"
   }
 }
