--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,49 +1,131 @@
 {
   "phase0": {
-    "mainTitle": "Protocolo Leviatán-Génesis",
-    "phaseTitle": "Fase 0: Activación",
-    "description": "Defina los parámetros fundamentales para la excavación estratégica.",
-    "domainLabel": "1. Dominio de Excavación",
-    "domainPlaceholder": "Ej: Productividad para equipos remotos asíncronos en el sector tecnológico",
-    "contextLabel": "2. Contexto del Creador",
-    "contextPlaceholder": "Ej: Emprendedor en solitario con experiencia en UX/UI, sin capital inicial, con 15 horas semanales para dedicar al proyecto.",
-    "ambitionLabel": "3. Nivel de Ambición",
-    "ambitionPlaceholder": "Ej: Crear un Micro-SaaS B2B que alcance $10k de ingresos mensuales en 24 meses.",
-    "surpriseButton": "✨ Sorpréndeme: Genera una Tesis",
-    "nextButton": "Iniciar Deconstrucción →"
+    "mainTitle": "60-Second Unicorn",
+    "phaseTitle": "Descubre Tu Idea Millonaria en 60 Segundos",
+    "description": "Responde 3 preguntas y descubre tu próxima startup unicornio. Obtén análisis de mercado, puntuación de potencial y hoja de ruta completa al instante.",
+    "domainLabel": "¿Qué mercado te emociona?",
+    "domainPlaceholder": "ej: Coaches fitness con IA, Herramientas trabajo remoto, Plataformas economía creativa",
+    "contextLabel": "¿Cuál es tu superpoder + limitaciones?",
+    "contextPlaceholder": "ej: Desarrollador full-stack, sin capital inicial, 20 horas/semana, ubicado en Barcelona.",
+    "ambitionLabel": "¿Cuál sería tu victoria épica?",
+    "ambitionPlaceholder": "ej: Construir un SaaS que alcance $50k MRR en 24 meses y sea líder de la industria.",
+    "surpriseButton": "🦄 Generar Mi Idea Unicornio",
+    "nextButton": "Validar Mi Propia Idea →"
+  },
+  "phase1_principles": {
+    "phaseTitle": "Fase 1: Deconstrucción Estratégica",
+    "phaseDescription": "Comenzamos con primeros principios. Deconstruir tu mercado para encontrar verdades fundamentales.",
+    "label1_1": "1.1 ¿Qué dominio o idea quieres explorar?",
+    "placeholder1_1": "ej: Apps de productividad para equipos remotos",
+    "label1_2": "Detrás de esto, ¿cuál es la necesidad humana fundamental y atemporal?",
+    "description1_2": "ej: La necesidad de seguridad, estatus, conexión, crecimiento, autoexpresión.",
+    "placeholder1_2": "ej: La necesidad de sentir progreso y logro.",
+    "feedbackButton": "Obtener Feedback Socrático",
+    "loadingText": "Analizando...",
+    "label1_3": "¿Cuáles son 2-3 verdades innegociables sobre este dominio?",
+    "description1_3": "Leyes físicas, económicas o psicológicas. Una por línea.",
+    "placeholder1_3": "ej: La atención es un recurso finito.\nCambiar contexto destruye productividad.\nLas personas quieren resultados, no herramientas.",
+    "nextButton": "Siguiente Paso →"
+  },
+  "phase1_conventions": {
+    "phaseTitle": "Fase 1.1: Desafiar Convenciones",
+    "phaseDescription": "Identifica suposiciones frágiles del mercado y formula contra-hipótesis revolucionarias.",
+    "blockTitle": "Convención #{index + 1}",
+    "label1": "Convención / 'Mejor Práctica':",
+    "placeholder1": "ej: Las startups necesitan financiación venture para escalar exitosamente.",
+    "label2": "Contra-Hipótesis Revolucionaria:",
+    "placeholder2": "ej: Bootstrapping + ingresos desde día 1 es más poderoso que capital venture.",
+    "addButton": "+ Agregar Otra Convención",
+    "removeButton": "Remover",
+    "backButton": "← Atrás",
+    "nextButton": "Siguiente Paso →"
+  },
+  "phase1_jtbd": {
+    "phaseTitle": "Fase 1.2: Definir el 'Job To Be Done'",
+    "phaseDescription": "Articula el trabajo real que tu cliente está 'contratando' a tu producto para hacer.",
+    "verbLabel": "VERBO:",
+    "verbPlaceholder": "ej: organizar",
+    "objectLabel": "OBJETO:",
+    "objectPlaceholder": "ej: feedback de clientes",
+    "contextLabel": "CONTEXTO:",
+    "contextPlaceholder": "ej: al lanzar una nueva característica",
+    "outcomeLabel": "RESULTADO:",
+    "outcomePlaceholder": "ej: entregar actualizaciones más rápido",
+    "summaryTitle": "Tu Job To Be Done",
+    "summaryPhrase": "Cuando {context}, ayúdame a {verb} {object}, para que pueda {outcome}.",
+    "dimensionsTitle": "¿Cuáles son todas las dimensiones de este trabajo?",
+    "functionalLabel": "FUNCIONAL:",
+    "functionalPlaceholder": "¿Cuáles son los resultados objetivos y medibles?",
+    "emotionalLabel": "EMOCIONAL:",
+    "emotionalPlaceholder": "¿Cómo quieren sentirse?",
+    "socialLabel": "SOCIAL:",
+    "socialPlaceholder": "¿Cómo quieren ser percibidos por otros?",
+    "nextButton": "Ver Resumen de Tesis →"
+  },
+  "phase1_progress": {
+    "phaseTitle": "Fase 1.3: Las Cuatro Fuerzas del Progreso",
+    "phaseDescription": "Analiza la física del proceso de toma de decisiones del cliente.",
+    "pushLabel": "EMPUJE de la Situación:",
+    "pushDescription": "¿Cuáles son los dolores, frustraciones y soluciones temporales de la solución actual que los empuja a buscar algo nuevo?",
+    "pushPlaceholder": "ej: Sigo perdiendo feedback compartido en canales de Slack, causando retrasos y clientes frustrados...",
+    "pullLabel": "ATRACCIÓN de la Nueva Solución:",
+    "pullDescription": "¿Cuál es la promesa y visión de un 'nuevo yo' que la nueva solución ofrece?",
+    "pullPlaceholder": "ej: Un futuro donde todo el feedback está centralizado, es accionable, y nunca pierdo un insight crítico.",
+    "anxietyLabel": "ANSIEDAD de la Nueva Solución:",
+    "anxietyDescription": "¿Qué miedos, incertidumbres y objeciones genera la idea de adoptar la nueva solución?",
+    "anxietyPlaceholder": "ej: ¿Y si es muy complicado de configurar? ¿Realmente lo usará mi equipo?",
+    "habitLabel": "HÁBITO del Presente:",
+    "habitDescription": "¿Cuál es la fuerza gravitacional de la inercia y el apego a la solución actual, aunque sea imperfecta?",
+    "habitPlaceholder": "ej: Es más fácil enviar rápidamente un mensaje en Slack, aunque se pierda después.",
+    "nextButton": "Comenzar Análisis del Ecosistema →"
   },
   "generating": {
-    "title": "Ejecutando Protocolo LEVIATÁN",
-    "description": "Este complejo proceso puede tardar hasta un minuto. La IA está realizando un análisis estratégico profundo para generar un resultado de alta calidad.",
+    "title": "Analizando Tu Potencial Unicornio",
+    "description": "Nuestro Oráculo IA está realizando análisis estratégico profundo para generar insights de nivel unicornio. Este proceso toma hasta 60 segundos para garantizar máxima precisión.",
     "phases": [
-      "Fase 1: Deconstruyendo la Realidad...",
-      "Analizando Primeros Principios & JTBD...",
-      "Fase 2: Mapeando el Ecosistema...",
-      "Analizando PESTEL & Fuerzas de Porter...",
-      "Fase 3: Síntesis Creativa...",
-      "Ejecutando SCAMPER & Polinización Cruzada...",
-      "Fase 4: Modelando la Viabilidad del Negocio...",
-      "Diseñando Lean Canvas & Modelo Hook...",
-      "Fase 5: Forjando la Tesis Final...",
-      "Manifestando..."
+      "Fase 1: Deconstruyendo Realidad del Mercado...",
+      "Analizando Primeros Principios & Jobs de Clientes...",
+      "Fase 2: Mapeando Panorama Competitivo...",
+      "Ejecutando PESTEL & Cinco Fuerzas de Porter...",
+      "Fase 3: Generando Hipótesis de Negocio Innovadoras...",
+      "Modelando Lean Canvas & Patrones de Engagement...",
+      "Fase 4: Calculando Puntuación Unicornio...",
+      "Fase 5: Creando Tu Blueprint de Ejecución...",
+      "Finalizando: Generando Prompt de Codificación..."
     ]
   },
   "summary": {
-    "title": "Tu Tesis Final & Manifiesto del Producto",
-    "description": "Esta es la culminación de tu análisis estratégico. Revisa el blueprint final antes de generar el prompt de codificación.",
+    "title": "Tu Análisis Unicornio Final",
+    "description": "Esta es la culminación de tu análisis estratégico. Revisa tu puntuación unicornio y blueprint final antes de generar el prompt de codificación.",
     "selectedHypothesis": "Hipótesis Seleccionada",
-    "justification": "Justificación",
-    "thesisStatement": "La Declaración de la Tesis (Placeholder)",
+    "justification": "Justificación Estratégica",
+    "thesisStatement": "Declaración de Tesis",
     "coreBlueprint": "Blueprint Principal",
-    "uvp": "PUV",
-    "unfairAdvantage": "Ventaja Injusta",
-    "flywheel": "Flywheel",
-    "backButton": "← Volver",
-    "nextButton": "Generar Prompt Final →",
-    "loading": "Cargando tesis o esperando selección del modelo...",
-    "error": "Error: Se recibieron datos inconsistentes. No se pudo mostrar el resumen.",
-    "generationFailedError": "La IA no pudo generar una tesis válida después de múltiples intentos. Esto puede ser un problema intermitente.",
-    "tryAgainButton": "Intentar de Nuevo",
-    "thesisStatementTemplate": "El mercado cree en \"{{convention}}\", pero la verdad es que [Contra-Hipótesis Radical], que materializaremos a través de un [Tipo de Solución] que aprovecha una [Ventaja Injusta]."
+    "uniqueValueProp": "Propuesta de Valor Única",
+    "unfairAdvantage": "Ventaja Competitiva",
+    "flywheel": "Motor de Crecimiento",
+    "unicornScore": "Puntuación Unicornio",
+    "loadingText": "Cargando análisis unicornio...",
+    "errorText": "Error: Datos de análisis inconsistentes...",
+    "failureText": "La IA falló en generar análisis válido. Intenta de nuevo.",
+    "backButton": "← Atrás",
+    "generateButton": "Generar Prompt de Codificación →",
+    "retryButton": "Intentar de Nuevo"
+  },
+  "manifesto": {
+    "title": "Tu Blueprint de Codificación Unicornio",
+    "description": "Este es tu artefacto final: un prompt detallado para construir tu MVP unicornio. Copia esto y da vida a tu visión en cualquier plataforma de IA (Lovable, Bolt.new, v0).",
+    "unicornScoreTitle": "🦄 Puntuación Unicornio",
+    "scoreMessages": {
+      "exceptional": "🚀 ¡Potencial Unicornio! Esta idea tiene potencial excepcional.",
+      "strong": "⭐ ¡Fuerte Potencial! Esta podría ser tu idea breakthrough.",
+      "good": "💡 ¡Buena Base! Con refinamiento, podría funcionar muy bien.",
+      "needsWork": "🔧 ¡Necesita Trabajo! Considera pivotar o ajustes importantes.",
+      "highRisk": "⚠️ ¡Alto Riesgo! Esta idea puede necesitar cambios fundamentales."
+    },
+    "copyButton": "Copiar al Portapapeles",
+    "copiedButton": "¡Copiado!",
+    "shareButton": "📱 Compartir Mi Puntuación",
+    "resetButton": "Descubrir Otro Unicornio"
   }
 }
