--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -1,49 +1,147 @@
 {
   "phase0": {
-    "mainTitle": "Protocolo Leviatã-Gênesis",
-    "phaseTitle": "Fase 0: Ativação",
-    "description": "Defina os parâmetros fundamentais para a escavação estratégica.",
-    "domainLabel": "1. Domínio de Escavação",
-    "domainPlaceholder": "Ex: Produtividade para times remotos assíncronos no setor de tecnologia",
-    "contextLabel": "2. Contexto do Criador",
-    "contextPlaceholder": "Ex: Empreendedor individual com background em UX/UI, sem capital inicial, com 15 horas semanais para dedicar ao projeto.",
-    "ambitionLabel": "3. Nível de Ambição",
-    "ambitionPlaceholder": "Ex: Criar um Micro-SaaS B2B que atinja $10k de receita mensal em 24 meses.",
-    "surpriseButton": "✨ Me surpreenda: Gere uma Tese",
-    "nextButton": "Iniciar Deconstrução →"
+    "mainTitle": "60-Second Unicorn",
+    "phaseTitle": "Descubra Sua Ideia Milionária em 60 Segundos",
+    "description": "Responda 3 perguntas e descubra sua próxima startup unicórnio. Receba análise de mercado, pontuação de potencial e roadmap completo instantaneamente.",
+    "domainLabel": "Que mercado te deixa empolgado?",
+    "domainPlaceholder": "ex: Fintech para MEIs, Apps para delivery, IA para e-commerce brasileiro",
+    "contextLabel": "Qual seu superpoder + suas limitações?",
+    "contextPlaceholder": "ex: Desenvolvedor fullstack, sem capital inicial, 20h/semana, moro em São Paulo.",
+    "ambitionLabel": "Qual seria sua vitória épica?",
+    "ambitionPlaceholder": "ex: Criar um SaaS que fature R$50k/mês em 24 meses e seja referência no Brasil.",
+    "surpriseButton": "🦄 Gerar Minha Ideia Unicórnio",
+    "nextButton": "Validar Minha Própria Ideia →"
+  },
+  "phase1_principles": {
+    "phaseTitle": "Fase 1: Desconstrução Estratégica",
+    "phaseDescription": "Vamos começar pelos primeiros princípios. Desconstruir seu mercado até encontrar as verdades fundamentais.",
+    "label1_1": "1.1 Que domínio ou ideia você quer explorar?",
+    "placeholder1_1": "ex: Apps de produtividade para pequenos empreendedores brasileiros",
+    "label1_2": "Por trás disso, qual é a necessidade humana fundamental e atemporal?",
+    "description1_2": "ex: Necessidade de segurança, status, conexão, crescimento, autoexpressão.",
+    "placeholder1_2": "ex: A necessidade de sentir que está progredindo e sendo produtivo.",
+    "feedbackButton": "Obter Feedback Socrático",
+    "loadingText": "Analisando...",
+    "label1_3": "Quais são 2-3 verdades inegociáveis sobre esse domínio?",
+    "description1_3": "Leis físicas, econômicas ou psicológicas. Uma por linha.",
+    "placeholder1_3": "ex: Atenção é um recurso finito.\nMudança de contexto destrói produtividade.\nPessoas querem resultados, não ferramentas.",
+    "nextButton": "Próximo Passo →"
+  },
+  "phase1_conventions": {
+    "phaseTitle": "Fase 1.1: Desafiar Convenções",
+    "phaseDescription": "Identifique suposições frágeis do mercado e formule contra-hipóteses revolucionárias.",
+    "blockTitle": "Convenção #{index + 1}",
+    "label1": "Convenção / 'Melhor Prática':",
+    "placeholder1": "ex: Startups brasileiras precisam de investimento para crescer.",
+    "label2": "Contra-Hipótese Revolucionária:",
+    "placeholder2": "ex: Bootstrapping + receita desde o dia 1 é mais poderoso que venture capital.",
+    "addButton": "+ Adicionar Outra Convenção",
+    "removeButton": "Remover",
+    "backButton": "← Voltar",
+    "nextButton": "Próximo Passo →"
+  },
+  "phase1_jtbd": {
+    "phaseTitle": "Fase 1.2: Definir o 'Job To Be Done'",
+    "phaseDescription": "Articule o trabalho real que seu cliente está 'contratando' seu produto para fazer.",
+    "verbLabel": "VERBO:",
+    "verbPlaceholder": "ex: organizar",
+    "objectLabel": "OBJETO:",
+    "objectPlaceholder": "ex: feedbacks de clientes",
+    "contextLabel": "CONTEXTO:",
+    "contextPlaceholder": "ex: ao lançar uma nova feature",
+    "outcomeLabel": "RESULTADO:",
+    "outcomePlaceholder": "ex: entregar atualizações mais rápido",
+    "summaryTitle": "Seu Job To Be Done",
+    "summaryPhrase": "Quando {context}, me ajude a {verb} {object}, para que eu possa {outcome}.",
+    "dimensionsTitle": "Quais são todas as dimensões deste trabalho?",
+    "functionalLabel": "FUNCIONAL:",
+    "functionalPlaceholder": "Quais são os resultados objetivos e mensuráveis?",
+    "emotionalLabel": "EMOCIONAL:",
+    "emotionalPlaceholder": "Como eles querem se sentir?",
+    "socialLabel": "SOCIAL:",
+    "socialPlaceholder": "Como eles querem ser percebidos pelos outros?",
+    "nextButton": "Ver Resumo da Tese →"
+  },
+  "phase1_progress": {
+    "phaseTitle": "Fase 1.3: As Quatro Forças do Progresso",
+    "phaseDescription": "Analise a física do processo de tomada de decisão do cliente.",
+    "pushLabel": "EMPURRÃO da Situação:",
+    "pushDescription": "Quais são as dores, frustrações e gambiarras da solução atual que os empurram para buscar algo novo?",
+    "pushPlaceholder": "ex: Fico perdendo feedbacks enviados no WhatsApp, causando atrasos e cliente bravo...",
+    "pullLabel": "ATRAÇÃO da Nova Solução:",
+    "pullDescription": "Qual é a promessa e visão de um 'novo eu' que a nova solução oferece?",
+    "pullPlaceholder": "ex: Um futuro onde todos os feedbacks ficam centralizados, organizados, e nunca perco insight crítico.",
+    "anxietyLabel": "ANSIEDADE da Nova Solução:",
+    "anxietyDescription": "Quais medos, incertezas e objeções a ideia de adotar a nova solução gera?",
+    "anxietyPlaceholder": "ex: E se for muito complicado de configurar? Será que minha equipe vai usar mesmo?",
+    "habitLabel": "HÁBITO do Presente:",
+    "habitDescription": "Qual é a força gravitacional da inércia e apego à solução atual, mesmo sendo imperfeita?",
+    "habitPlaceholder": "ex: É só mais fácil mandar uma mensagem rápida no WhatsApp, mesmo sabendo que vai se perder.",
+    "nextButton": "Iniciar Análise do Ecossistema →"
   },
   "generating": {
-    "title": "Executando Protocolo LEVIATÃ",
-    "description": "Este processo complexo pode levar até um minuto. A IA está realizando uma análise estratégica profunda para gerar um resultado de alta qualidade.",
+    "title": "Analisando Seu Potencial Unicórnio",
+    "description": "Nosso Oráculo IA está realizando análise estratégica profunda para gerar insights de nível unicórnio. Este processo leva até 60 segundos para garantir máxima precisão.",
     "phases": [
-      "Fase 1: Desconstruindo a Realidade...",
-      "Analisando Primeiros Princípios & JTBD...",
-      "Fase 2: Mapeando o Ecossistema...",
-      "Analisando PESTEL & Forças de Porter...",
-      "Fase 3: Síntese Criativa...",
-      "Executando SCAMPER & Polinização Cruzada...",
-      "Fase 4: Modelando a Viabilidade do Negócio...",
-      "Desenhando Lean Canvas & Modelo Hook...",
-      "Fase 5: Forjando a Tese Final...",
-      "Manifestando..."
+      "Fase 1: Desconstruindo a Realidade do Mercado...",
+      "Analisando Primeiros Princípios & Jobs dos Clientes...",
+      "Fase 2: Mapeando Cenário Competitivo Brasileiro...",
+      "Executando PESTEL & Cinco Forças de Porter...",
+      "Fase 3: Gerando Hipóteses de Negócio Inovadoras...",
+      "Modelando Lean Canvas & Padrões de Engajamento...",
+      "Fase 4: Calculando Pontuação Unicórnio...",
+      "Fase 5: Criando Seu Blueprint de Execução...",
+      "Finalizando: Gerando Prompt de Codificação..."
     ]
   },
   "summary": {
-    "title": "Sua Tese Final & Manifesto do Produto",
-    "description": "Esta é a culminação de sua análise estratégica. Revise o blueprint final antes de gerar o prompt de codificação.",
+    "title": "Sua Análise Unicórnio Final",
+    "description": "Esta é a culminação da sua análise estratégica. Revise sua pontuação unicórnio e blueprint final antes de gerar o prompt de codificação.",
     "selectedHypothesis": "Hipótese Selecionada",
-    "justification": "Justificativa",
-    "thesisStatement": "A Declaração da Tese (Placeholder)",
+    "justification": "Justificativa Estratégica",
+    "thesisStatement": "Declaração da Tese",
     "coreBlueprint": "Blueprint Principal",
-    "uvp": "PUV",
-    "unfairAdvantage": "Vantagem Injusta",
-    "flywheel": "Flywheel",
+    "uniqueValueProp": "Proposta de Valor Única",
+    "unfairAdvantage": "Vantagem Competitiva",
+    "flywheel": "Motor de Crescimento",
+    "unicornScore": "Pontuação Unicórnio",
+    "loadingText": "Carregando análise unicórnio...",
+    "errorText": "Erro: Dados inconsistentes da análise...",
+    "failureText": "A IA falhou em gerar uma análise válida. Tente novamente.",
     "backButton": "← Voltar",
-    "nextButton": "Gerar Prompt Final →",
-    "loading": "Carregando tese ou aguardando seleção do modelo...",
-    "error": "Erro: Dados inconsistentes recebidos. Não foi possível exibir o resumo.",
-    "generationFailedError": "A IA falhou em gerar uma tese válida após múltiplas tentativas. Este pode ser um problema intermitente.",
-    "tryAgainButton": "Tentar Novamente",
-    "thesisStatementTemplate": "O mercado acredita em \"{{convention}}\", mas a verdade é que [Contra-Hipótese Radical], que materializaremos através de um [Tipo de Solução] que alavanca uma [Vantagem Injusta]."
+    "generateButton": "Gerar Prompt de Codificação →",
+    "retryButton": "Tentar Novamente"
+  },
+  "manifesto": {
+    "title": "Seu Blueprint de Codificação Unicórnio",
+    "description": "Este é seu artefato final: um prompt detalhado para construir seu MVP unicórnio. Copie isso e dê vida à sua visão em qualquer plataforma de IA (Lovable, Bolt.new, v0).",
+    "unicornScoreTitle": "🦄 Pontuação Unicórnio",
+    "scoreMessages": {
+      "exceptional": "🚀 Potencial Unicórnio! Esta ideia tem potencial excepcional.",
+      "strong": "⭐ Forte Potencial! Esta pode ser sua ideia breakthrough.",
+      "good": "💡 Boa Base! Com refinamentos, pode funcionar muito bem.",
+      "needsWork": "🔧 Precisa de Trabalho! Considere pivotar ou ajustes importantes.",
+      "highRisk": "⚠️ Alto Risco! Esta ideia pode precisar de mudanças fundamentais."
+    },
+    "copyButton": "Copiar para Área de Transferência",
+    "copiedButton": "Copiado!",
+    "shareButton": "📱 Compartilhar Minha Pontuação",
+    "resetButton": "Descobrir Outro Unicórnio"
+  },
+  "phase2_pestel": {
+    "title": "Fase 2: Análise PESTEL - Forças Macro",
+    "description": "Mapeie as correntes macro que afetam seu mercado no Brasil e globalmente.",
+    "politicalLabel": "Político:",
+    "politicalPlaceholder": "ex: Regulamentações do Banco Central para fintechs, Lei Geral de Proteção de Dados",
+    "economicLabel": "Econômico:",
+    "economicPlaceholder": "ex: Alta taxa de juros no Brasil, crescimento do PIB, inflação",
+    "socialLabel": "Social:",
+    "socialPlaceholder": "ex: Crescimento da classe C digital, envelhecimento da população",
+    "technologicalLabel": "Tecnológico:",
+    "technologicalPlaceholder": "ex: Adoção massiva do PIX, crescimento do 5G, IA generativa",
+    "environmentalLabel": "Ambiental:",
+    "environmentalPlaceholder": "ex: Pressão por ESG, mudanças climáticas, sustentabilidade",
+    "legalLabel": "Legal:",
+    "legalPlaceholder": "ex: Marco Civil da Internet, regulamentação de criptomoedas"
   }
 }
